--- a/Project.html
+++ b/Project.html
@@ -5,202 +5,199 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - LaMonje</title>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Shadows+Into+Light&display=swap" rel="stylesheet">
-<style>
-  /* styles.css */
+    <style>
+        /* styles.css */
+        body {
+            background-color: #EAE2B7;
+            color: #000000;
+            font-family: 'Anton', sans-serif;
+            margin: 0;
+            padding: 0;
+        }
 
-body {
-    background-color: #EAE2B7;
-    color: #000000;
-    font-family: 'Anton', sans-serif;
-    margin: 0;
-    padding: 0;
-}
+        .navbar {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 10px;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            background: transparent;
+        }
 
-.navbar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-    background: transparent;
-}
+        .navbar a {
+            color: #FB8500;
+            text-decoration: none;
+            margin: 0 15px;
+            transition: color 0.3s ease;
+        }
 
-.navbar a {
-    color: #FB8500;
-    text-decoration: none;
-    margin: 0 15px;
-    transition: color 0.3s ease;
-}
+        .navbar a:hover {
+            color: #000;
+        }
 
-.navbar a:hover {
-    color: #000;
-}
+        .content {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 20px;
+        }
 
-.content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-}
+        .section {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            margin: 40px 0;
+            cursor: pointer;
+        }
 
-.section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    margin: 40px 0;
-    cursor: pointer;
-}
+        .title {
+            font-size: 120px; /* Very large header size */
+            margin-bottom: 10px;
+            text-align: center;
+            cursor: pointer;
+            transition: transform 0.3s ease; /* Melting effect */
+            animation: floatAnimation 3s infinite alternate; /* Floating animation */
+        }
 
-.title {
-    font-size: 120px; /* Very large header size */
-    margin-bottom: 10px;
-    text-align: center;
-    cursor: pointer;
-    transition: transform 0.3s ease; /* Melting effect */
-    animation: floatAnimation 3s infinite alternate; /* Floating animation */
-}
+        .title:hover {
+            transform: scale(1.1);
+        }
 
-.title:hover {
-    transform: scale(1.1);
-}
+        .subtext {
+            font-size: 36px; /* Larger subtext size */
+            font-weight: bold;
+            color: #FB8500; /* Orange color */
+            text-align: center;
+            margin-top: 10px;
+            cursor: pointer;
+            transition: color 0.3s ease;
+        }
 
-.subtext {
-    font-size: 36px; /* Larger subtext size */
-    font-weight: bold;
-    color: #FB8500; /* Orange color */
-    text-align: center;
-    margin-top: 10px;
-    cursor: pointer;
-    transition: color 0.3s ease;
-}
+        .subtext:hover {
+            color: #FF5733; /* Darker shade of orange */
+        }
 
-.subtext:hover {
-    color: #FF5733; /* Darker shade of orange */
-}
+        .hidden-section {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 2000;
+            background-color: rgba(222, 226, 230, 0.8); /* Semi-transparent gray background */
+            padding: 20px;
+            overflow-y: auto; /* Enable scrolling */
+            pointer-events: auto; /* Enable clicking on pop-up */
+            opacity: 0;
+            transition: opacity 0.5s ease; /* Fade-in transition */
+        }
 
-.hidden-section {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 2000;
-    background-color: rgba(222, 226, 230, 0.8); /* Semi-transparent gray background */
-    padding: 20px;
-    overflow-y: auto;
-    pointer-events: auto; /* Enable clicking on pop-up */
-    opacity: 0;
-    transition: opacity 0.5s ease; /* Fade-in transition */
-}
+        .hidden-section.visible {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            opacity: 1;
+        }
 
-.hidden-section.visible {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    opacity: 1;
-}
+        .close-button {
+            position: absolute;
+            top: 20px;
+            right: 20px; /* Adjusted position */
+            font-size: 32px; /* Increased font size */
+            color: #FB8500; /* Orange color */
+            cursor: pointer;
+            transition: color 0.3s ease;
+        }
 
-.close-button {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    font-size: 24px;
-    color: #FB8500; /* Orange color */
-    cursor: pointer;
-    transition: color 0.3s ease;
-}
+        .close-button:hover {
+            color: #FF5733; /* Darker shade of orange */
+        }
 
-.close-button:hover {
-    color: #FF5733; /* Darker shade of orange */
-}
+        .image-wrapper {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 20px;
+            padding: 20px;
+            width: 80%;
+            max-width: 1000px; /* Adjusted max-width */
+            overflow-x: hidden; /* Hide horizontal overflow */
+        }
 
-.image-wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 20px;
-    padding: 20px;
-    width: 80%;
-    max-width: 1200px;
-}
+        .image-container {
+            flex: 1 1 auto;
+            max-width: calc(33.33% - 20px); /* Adjusted maximum width */
+            margin-bottom: 20px; /* Added margin between images */
+            overflow: hidden;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+        }
 
-.image-container {
-    flex: 1 1 auto;
-    max-width: 100%;
-    overflow: hidden;
-    border-radius: 10px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-}
+        .image-container img {
+            width: 100%;
+            height: auto;
+            border-radius: 10px;
+            transition: transform 0.3s ease;
+        }
 
-.image-container img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
-    transition: transform 0.3s ease;
-}
+        .image-container:hover img {
+            transform: scale(1.1);
+        }
 
-.image-container:hover img {
-    transform: scale(1.1);
-}
+        .details {
+            margin-top: 20px;
+            text-align: center;
+            font-size: 24px;
+            line-height: 1.6;
+            color: #000000; /* Handwritten font color */
+            font-family: 'Shadows Into Light', cursive; /* Handwritten font */
+        }
 
-.large {
-    flex-basis: calc(33.33% - 20px);
-}
+        @keyframes floatAnimation {
+            0%, 100% {
+                transform: translateY(0);
+            }
+            50% {
+                transform: translateY(-20px);
+            }
+        }
 
-.medium {
-    flex-basis: calc(25% - 20px);
-}
+        @media (max-width: 768px) {
+            .title {
+                font-size: 80px; /* Responsive header size */
+            }
 
-.small {
-    flex-basis: calc(16.66% - 20px);
-}
+            .subtext {
+                font-size: 24px; /* Responsive subtext size */
+            }
 
-.details {
-    margin-top: 20px;
-    text-align: center;
-    font-size: 24px;
-    line-height: 1.6;
-    color: #000000; /* Handwritten font color */
-    font-family: 'Shadows Into Light', cursive; /* Handwritten font */
-}
+            .large, .medium, .small {
+                flex-basis: calc(50% - 20px);
+            }
 
-@keyframes floatAnimation {
-    0%, 100% {
-        transform: translateY(0);
-    }
-    50% {
-        transform: translateY(-20px);
-    }
-}
+            .image-container {
+                max-width: calc(50% - 20px); /* Adjusted maximum width for mobile */
+            }
 
-@media (max-width: 768px) {
-    .title {
-        font-size: 80px; /* Responsive header size */
-    }
+            .image-wrapper {
+                padding: 10px; /* Reduced padding for mobile */
+            }
+        }
 
-    .subtext {
-        font-size: 24px; /* Responsive subtext size */
-    }
-
-    .large, .medium, .small {
-        flex-basis: calc(50% - 20px);
-    }
-}
-</style>
-</head>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
-    <link rel="stylesheet" href="styles.css">
+        /* Ensure that pop-up content is centered on all devices */
+        @media (max-width: 768px) {
+            .hidden-section.visible {
+                align-items: center;
+                justify-content: center;
+            }
+        }
+    </style>
 </head>
 <body>
     <div class="navbar">
@@ -218,31 +215,31 @@ body {
                 <div class="close-button" onclick="toggleVisibility('company1')">X</div>
                 <div class="image-wrapper">
                     <div class="image-container large">
-                        <img src="psy11.jpg" alt="Slide Image 1">
+                        <img src="aid4.jpg" alt="Slide Image 1">
                     </div>
                     <div class="image-container medium">
                         <img src="about1.png" alt="Slide Image 2">
                     </div>
                     <div class="image-container small">
-                        <img src="image4.jpg" alt="Slide Image 3">
+                        <img src="aid2.jpg" alt="Slide Image 3">
                     </div>
                     <div class="image-container medium">
-                        <img src="image5.jpg" alt="Slide Image 4">
+                        <img src="about4.png" alt="Slide Image 4">
                     </div>
                     <div class="image-container large">
-                        <img src="psy11.jpg" alt="Slide Image 5">
+                        <img src="about3.png" alt="Slide Image 5">
                     </div>
                     <div class="image-container small">
                         <img src="about1.png" alt="Slide Image 6">
                     </div>
                     <div class="image-container medium">
-                        <img src="image4.jpg" alt="Slide Image 7">
+                        <img src="about2.png" alt="Slide Image 7">
                     </div>
                     <div class="image-container large">
-                        <img src="image5.jpg" alt="Slide Image 8">
+                        <img src="aid4.jpg" alt="Slide Image 8">
                     </div>
                     <div class="image-container small">
-                        <img src="psy11.jpg" alt="Slide Image 9">
+                        <img src="aid2.jpg" alt="Slide Image 9">
                     </div>
                 </div>
                 <div class="details">
@@ -252,6 +249,7 @@ body {
                     ● Staffing Solutions<br>
                     ● Comprehensive Reporting<br><br>
                     More about what we did: Detailed description here...
+                    <div class="close-button" onclick="toggleVisibility('company1')">X</div>
                 </div>
             </div>
         </div>
